fix spacing of automad's hr element

--- a/source/css/user-editable.css
+++ b/source/css/user-editable.css
@@ -2,6 +2,10 @@
   margin: 0;
 }
 
+.user-editable :not(:last-child) {
+  margin-bottom: 0.5em;
+}
+
 .user-editable a {
   color: var(--red);
 }
@@ -10,6 +14,7 @@
   max-width: 100%;
 }
 
-.user-editable :not(:last-child) {
-  margin-bottom: 0.5em;
+.user-editable hr {
+  margin: 0.5em auto;
+  color: var(--shadow-color);
 }
